DataObjectTestHelper use DoEntity.equals(), clean up assertion methods
Conflicts:
	org.eclipse.scout.rt.jackson.test/src/test/java/org/eclipse/scout/rt/jackson/dataobject/JsonDataObjectsSerializationTest.java
	org.eclipse.scout.rt.platform.test/src/main/java/org/eclipse/scout/rt/testing/platform/dataobject/DataObjectTestHelper.java

Change-Id: I070384eff8468ea81437001d32321d77dd988eae
Reviewed-on: https://git.eclipse.org/r/142133
Reviewed-by: Paolo Bazzi <paolo.bazzi@bsi-software.com>
Tested-by: Paolo Bazzi <paolo.bazzi@bsi-software.com>