@@ -417,7 +417,7 @@ public class JsonDataObjectsSerializationTest {
 
     String json = s_dataObjectMapper.writeValueAsString(testDo);
     TestRenamedAttributeDo testDoMarshalled = s_dataObjectMapper.readValue(json, TestRenamedAttributeDo.class);
-    s_testHelper.assertDoEntityEquals(testDo, testDoMarshalled);
+    s_testHelper.assertEquals(testDo, testDoMarshalled);
   }
 
   @Test
@@ -426,7 +426,7 @@ public class JsonDataObjectsSerializationTest {
 
     String json = s_dataObjectMapper.writeValueAsString(testDo);
     TestItemExDo testDoMarshalled = s_dataObjectMapper.readValue(json, TestItemExDo.class);
-    s_testHelper.assertDoEntityEquals(testDo, testDoMarshalled);
+    s_testHelper.assertEquals(testDo, testDoMarshalled);
   }
 
   @Test
@@ -463,7 +463,7 @@ public class JsonDataObjectsSerializationTest {
     });
     String base64encoded = Base64Utility.encode(content);
     assertEquals(base64encoded, rawObject.get("content"));
-    s_testHelper.assertDoEntityEquals(binary, marshalled);
+    s_testHelper.assertEquals(binary, marshalled);
   }
 
   @Test
@@ -1005,7 +1005,7 @@ public class JsonDataObjectsSerializationTest {
     String jsonInput = readResourceAsString("TestComplexEntityDo.json");
     TestComplexEntityDo testDo = s_dataObjectMapper.readValue(jsonInput, TestComplexEntityDo.class);
     TestComplexEntityDo testDoExpected = createTestDo();
-    s_testHelper.assertDoEntityEquals(testDoExpected, testDo);
+    s_testHelper.assertEquals(testDoExpected, testDo);
   }
 
   @Test
@@ -1049,7 +1049,7 @@ public class JsonDataObjectsSerializationTest {
     String json = readResourceAsString("TestCollectionsDo.json");
     TestCollectionsDo doMarhalled = s_dataObjectMapper.readValue(json, TestCollectionsDo.class);
     TestCollectionsDo expectedDo = createTestCollectionsDo();
-    s_testHelper.assertDoEntityEquals(expectedDo, doMarhalled);
+    s_testHelper.assertEquals(expectedDo, doMarhalled);
   }
 
   @Test
@@ -1196,7 +1196,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestMapDo.json", json);
 
     TestMapDo marshalled = s_dataObjectMapper.readValue(json, TestMapDo.class);
-    s_testHelper.assertDoEntityEquals(mapDo, marshalled);
+    s_testHelper.assertEquals(mapDo, marshalled);
   }
 
   @Test
@@ -1289,7 +1289,7 @@ public class JsonDataObjectsSerializationTest {
     List<TestItemDo> actual = new ArrayList<>(marshalled.getItemDoSetAttribute());
     Collections.sort(actual, Comparator.comparing(TestItemDo::getId));
     for (int i = 0; i < expected.size(); i++) {
-      s_testHelper.assertDoEntityEquals(expected.get(i), actual.get(i));
+      s_testHelper.assertEquals(expected.get(i), actual.get(i));
     }
 
     // set of TestItemPojo must be unordered equals
@@ -1353,7 +1353,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestDoMapEntityDo.json", json);
 
     TestDoMapEntityDo marshalled = s_dataObjectMapper.readValue(json, TestDoMapEntityDo.class);
-    s_testHelper.assertDoEntityEquals(mapDo, marshalled);
+    s_testHelper.assertEquals(mapDo, marshalled);
 
     assertEquals("value-named", marshalled.getNamedItem().getStringAttribute());
     assertEquals("value-named", marshalled.get("namedItem").getStringAttribute());
@@ -1371,8 +1371,8 @@ public class JsonDataObjectsSerializationTest {
     TypeReference<Map<String, TestItemDo>> typeRef = new TypeReference<Map<String, TestItemDo>>() {
     };
     Map<String, TestItemDo> marshalled = s_dataObjectMapper.readValue(json, typeRef);
-    s_testHelper.assertDoEntityEquals(mapDo.get("mapAttribute1", IDoEntity.class), marshalled.get("mapAttribute1"));
-    s_testHelper.assertDoEntityEquals(mapDo.get("mapAttribute2", IDoEntity.class), marshalled.get("mapAttribute2"));
+    s_testHelper.assertEquals(mapDo.get("mapAttribute1", IDoEntity.class), marshalled.get("mapAttribute1"));
+    s_testHelper.assertEquals(mapDo.get("mapAttribute2", IDoEntity.class), marshalled.get("mapAttribute2"));
   }
 
   @Test
@@ -1405,7 +1405,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestDoMapListEntityDo.json", json);
 
     TestDoMapListEntityDo marshalled = s_dataObjectMapper.readValue(json, TestDoMapListEntityDo.class);
-    s_testHelper.assertDoEntityEquals(mapDo, marshalled);
+    s_testHelper.assertEquals(mapDo, marshalled);
 
     assertEquals("value-1a", marshalled.get("mapAttribute1").get(0).getStringAttribute());
     assertEquals("value-2b", marshalled.get("mapAttribute2").get(1).getStringAttribute());
@@ -1426,8 +1426,8 @@ public class JsonDataObjectsSerializationTest {
     assertEquals("value-1a", marshalled.get("mapAttribute1").get(0).getStringAttribute());
     assertEquals("value-2b", marshalled.get("mapAttribute2").get(1).getStringAttribute());
 
-    s_testHelper.assertDoEntityEquals((IDoEntity) mapDo.get("mapAttribute1", List.class).get(0), marshalled.get("mapAttribute1").get(0));
-    s_testHelper.assertDoEntityEquals((IDoEntity) mapDo.get("mapAttribute2", List.class).get(1), marshalled.get("mapAttribute2").get(1));
+    s_testHelper.assertEquals((IDoEntity) mapDo.get("mapAttribute1", List.class).get(0), marshalled.get("mapAttribute1").get(0));
+    s_testHelper.assertEquals((IDoEntity) mapDo.get("mapAttribute2", List.class).get(1), marshalled.get("mapAttribute2").get(1));
   }
 
   @Test
@@ -1485,7 +1485,7 @@ public class JsonDataObjectsSerializationTest {
 
   protected void assertTestPersonDo(TestPersonDo actual) {
     TestPersonDo expected = createTestPersonDo();
-    s_testHelper.assertDoEntityEquals(expected, actual);
+    s_testHelper.assertEquals(expected, actual);
 
     assertEquals(expected.birthday().get(), actual.getBirthday());
     assertEquals(expected.birthday().get().getTime(), actual.getBirthday().getTime());
@@ -1578,7 +1578,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestCoreExample1Do coreDoMarshalled = s_dataObjectMapper.readValue(expectedJson, TestCoreExample1Do.class);
-    s_testHelper.assertDoEntityEquals(coreDo, coreDoMarshalled);
+    s_testHelper.assertEquals(coreDo, coreDoMarshalled);
   }
 
   @Test
@@ -1591,7 +1591,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestProjectExample1Do coreDoMarshalled = s_dataObjectMapper.readValue(json, TestProjectExample1Do.class);
-    s_testHelper.assertDoEntityEquals(projectDo, coreDoMarshalled);
+    s_testHelper.assertEquals(projectDo, coreDoMarshalled);
   }
 
   /**
@@ -1616,7 +1616,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestCoreExample2Do coreDoMarshalled = s_dataObjectMapper.readValue(expectedJson, TestCoreExample2Do.class);
-    s_testHelper.assertDoEntityEquals(coreDo, coreDoMarshalled);
+    s_testHelper.assertEquals(coreDo, coreDoMarshalled);
   }
 
   @Test
@@ -1629,7 +1629,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestProjectExample2Do coreDoMarshalled = s_dataObjectMapper.readValue(json, TestProjectExample2Do.class);
-    s_testHelper.assertDoEntityEquals(projectDo, coreDoMarshalled);
+    s_testHelper.assertEquals(projectDo, coreDoMarshalled);
   }
 
   /**
@@ -1654,7 +1654,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestCoreExample3Do coreDoMarshalled = s_dataObjectMapper.readValue(expectedJson, TestCoreExample3Do.class);
-    s_testHelper.assertDoEntityEquals(coreDo, coreDoMarshalled);
+    s_testHelper.assertEquals(coreDo, coreDoMarshalled);
   }
 
   @Test
@@ -1667,7 +1667,7 @@ public class JsonDataObjectsSerializationTest {
     s_testHelper.assertJsonEquals(expectedJson, json);
 
     TestProjectExample3Do coreDoMarshalled = s_dataObjectMapper.readValue(json, TestProjectExample3Do.class);
-    s_testHelper.assertDoEntityEquals(projectDo, coreDoMarshalled);
+    s_testHelper.assertEquals(projectDo, coreDoMarshalled);
   }
 
   // ------------------------------------ exception handling tests ------------------------------------
@@ -1709,7 +1709,7 @@ public class JsonDataObjectsSerializationTest {
     }
     String json = s_dataObjectMapper.writeValueAsString(entity);
     DoEntity marshalled = s_dataObjectMapper.readValue(json, DoEntity.class);
-    s_testHelper.assertDoEntityEquals(entity, marshalled);
+    s_testHelper.assertEquals(entity, marshalled);
   }
 
   // ------------------------------------ generic attribute definition tests -----------------------------
@@ -1738,8 +1738,8 @@ public class JsonDataObjectsSerializationTest {
     assertEquals("foo", marshalled.getGenericListAttribute().get(0).genericAttribute().get());
     assertEquals(1234567890.1234567890, marshalled.getGenericListAttribute().get(1).genericAttribute().get());
     assertEquals("bar", marshalled.getGenericStringAttribute().genericAttribute().get());
-    assertEquals(Double.valueOf("789.123"), marshalled.getGenericDoubleAttribute().genericAttribute().get());
-    s_testHelper.assertDoEntityEquals(genericDo, marshalled);
+    assertEquals(new Double("789.123"), marshalled.getGenericDoubleAttribute().genericAttribute().get());
+    s_testHelper.assertEquals(genericDo, marshalled);
   }
 
   @Test
@@ -1753,19 +1753,19 @@ public class JsonDataObjectsSerializationTest {
     // read value with complete generic type definition
     TestGenericDo<TestItemDo> marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo<TestItemDo>>() {
     });
-    s_testHelper.assertDoEntityEquals(itemValueDo, marshalled);
+    s_testHelper.assertEquals(itemValueDo, marshalled);
     assertEquals("foo-id", marshalled.getGenericAttribute().getId());
 
     // read value with incomplete generic type definition
     TestGenericDo<TestItemDo> marshalled2 = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo>() {
     });
-    s_testHelper.assertDoEntityEquals(itemValueDo, marshalled2);
+    s_testHelper.assertEquals(itemValueDo, marshalled2);
     assertEquals("foo-id", marshalled2.getGenericAttribute().getId());
 
     // read value with no generic type definition
     @SuppressWarnings("unchecked")
     TestGenericDo<TestItemDo> marshalled3 = (TestGenericDo<TestItemDo>) s_dataObjectMapper.readValue(json, DoEntity.class);
-    s_testHelper.assertDoEntityEquals(itemValueDo, marshalled3);
+    s_testHelper.assertEquals(itemValueDo, marshalled3);
     assertEquals("foo-id", marshalled3.getGenericAttribute().getId());
   }
 
@@ -1785,7 +1785,7 @@ public class JsonDataObjectsSerializationTest {
 
     TestEntityWithGenericValuesDo marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestEntityWithGenericValuesDo>() {
     });
-    s_testHelper.assertDoEntityEquals(genericDo, marshalled);
+    s_testHelper.assertEquals(genericDo, marshalled);
     assertEquals("foo-id", marshalled.getGenericAttribute().get("genericAttribute", TestItemDo.class).getId());
     assertEquals("foo-id-2", marshalled.getGenericListAttribute().get(0).get("genericAttribute", TestItemDo.class).getId());
   }
@@ -1804,10 +1804,10 @@ public class JsonDataObjectsSerializationTest {
     TestGenericDo<List<TestItemDo>> marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo<List<TestItemDo>>>() {
     });
     // Marshaled class is not equals to serialized class, since List<TestItemDo> is deserialized to DoList<TestItemDo>. Compare only the List<TestItemDo> content.
-    s_testHelper.assertObjectEquals(items, marshalled.get("genericAttribute"), true);
+    s_testHelper.assertEquals(items, marshalled.get("genericAttribute"));
 
     DoEntity entity = s_dataObjectMapper.readValue(json, DoEntity.class);
-    s_testHelper.assertObjectEquals(items, entity.get("genericAttribute"), true);
+    s_testHelper.assertEquals(items, entity.get("genericAttribute"));
   }
 
   @Test
@@ -1824,19 +1824,19 @@ public class JsonDataObjectsSerializationTest {
     // read value with complete generic type definition
     TestGenericDo<TestItemDo> marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo<TestItemDo>>() {
     });
-    s_testHelper.assertDoEntityEquals(itemsDo, marshalled);
+    s_testHelper.assertEquals(itemsDo, marshalled);
     assertEquals("foo-id-1", marshalled.getGenericListAttribute().get(0).getId());
 
     // read value with incomplete generic type definition
     TestGenericDo<TestItemDo> marshalled2 = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo>() {
     });
-    s_testHelper.assertDoEntityEquals(itemsDo, marshalled2);
+    s_testHelper.assertEquals(itemsDo, marshalled2);
     assertEquals("foo-id-1", marshalled2.getGenericListAttribute().get(0).getId());
 
     // read value with no generic type definition
     @SuppressWarnings("unchecked")
     TestGenericDo<TestItemDo> marshalled3 = (TestGenericDo<TestItemDo>) s_dataObjectMapper.readValue(json, DoEntity.class);
-    s_testHelper.assertDoEntityEquals(itemsDo, marshalled3);
+    s_testHelper.assertEquals(itemsDo, marshalled3);
     assertEquals("foo-id-1", marshalled3.getGenericListAttribute().get(0).getId());
   }
 
@@ -1854,8 +1854,8 @@ public class JsonDataObjectsSerializationTest {
 
     TestGenericDo<Map<String, TestItemDo>> marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDo<Map<String, TestItemDo>>>() {
     });
-    // Marshaled class is not equals to serialized class, since Map<String, TestItemDo> is deserialized to a DoEntity. Compare only the attributes values.
-    s_testHelper.assertObjectEquals(map.values(), marshalled.get("genericAttribute", DoEntity.class).all().values(), true);
+    // Marshaled class is not equals to serialized class, since Map<String, TestItemDo> is deserialized to a DoEntity. Compare the expected map with all attribute values.
+    s_testHelper.assertEquals(map, marshalled.get("genericAttribute", DoEntity.class).all());
   }
 
   @Test
@@ -1872,7 +1872,7 @@ public class JsonDataObjectsSerializationTest {
 
     TestGenericDoEntityMapDo<Map<String, TestItemDo>> marshalled = s_dataObjectMapper.readValue(json, new TypeReference<TestGenericDoEntityMapDo<Map<String, TestItemDo>>>() {
     });
-    s_testHelper.assertDoEntityEquals(itemsMapDo, marshalled);
+    s_testHelper.assertEquals(itemsMapDo, marshalled);
     assertEquals("foo-id-1", marshalled.genericMapAttribute().get().get("foo-1").getId());
   }
 
@@ -1892,7 +1892,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestEntityWithInterface1Do.json", json);
 
     ITestBaseEntityDo marshalled = s_dataObjectMapper.readValue(json, ITestBaseEntityDo.class);
-    s_testHelper.assertDoEntityEquals(baseEntity, marshalled);
+    s_testHelper.assertEquals(baseEntity, marshalled);
   }
 
   @Test
@@ -1910,10 +1910,10 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestEntityWithInterface2Do.json", json);
 
     ITestBaseEntityDo marshalled = s_dataObjectMapper.readValue(json, ITestBaseEntityDo.class);
-    s_testHelper.assertDoEntityEquals(baseEntity, marshalled);
+    s_testHelper.assertEquals(baseEntity, marshalled);
 
     IDoEntity marshalledDoEntity = s_dataObjectMapper.readValue(json, IDoEntity.class);
-    s_testHelper.assertDoEntityEquals(baseEntity, marshalledDoEntity);
+    s_testHelper.assertEquals(baseEntity, marshalledDoEntity);
   }
 
   @Test
@@ -1928,7 +1928,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestCustomImplementedEntityDo.json", json);
 
     IDoEntity marshalledDoEntity = s_dataObjectMapper.readValue(json, IDoEntity.class);
-    s_testHelper.assertDoEntityEquals(entity, marshalledDoEntity);
+    s_testHelper.assertEquals(entity, marshalledDoEntity);
   }
 
   @Test
@@ -1939,7 +1939,7 @@ public class JsonDataObjectsSerializationTest {
 
     IDoEntity marshalledDoEntity = s_dataObjectMapper.readValue(json, IDoEntity.class);
     assertEquals(DoEntity.class, marshalledDoEntity.getClass());
-    s_testHelper.assertDoEntityEquals(entity, marshalledDoEntity);
+    s_testHelper.assertEquals(entity, marshalledDoEntity);
   }
 
   // ------------------------------------ IDataObject interface tests -----------------------------------
@@ -1967,7 +1967,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestEntityIDataObject.json", json);
 
     IDataObject marshalled = s_dataObjectMapper.readValue(json, IDataObject.class);
-    s_testHelper.assertDoEntityEquals(entity, (IDoEntity) marshalled);
+    s_testHelper.assertEquals(entity, (IDoEntity) marshalled);
   }
 
   @Test
@@ -1981,7 +1981,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestStringListIDataObject.json", json);
 
     IDataObject marshalled = s_dataObjectMapper.readValue(json, IDataObject.class);
-    s_testHelper.assertDoListEquals(list, DoList.class.cast(marshalled));
+    s_testHelper.assertEquals(list, marshalled);
   }
 
   @Test
@@ -1995,7 +1995,7 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestItemDoListIDataObject.json", json);
 
     IDataObject marshalled = s_dataObjectMapper.readValue(json, IDataObject.class);
-    s_testHelper.assertDoListEquals(list, DoList.class.cast(marshalled));
+    s_testHelper.assertEquals(list, marshalled);
   }
 
   @Test
@@ -2013,12 +2013,12 @@ public class JsonDataObjectsSerializationTest {
     assertJsonEquals("TestObjectListIDataObject.json", json);
 
     IDataObject marshalled = s_dataObjectMapper.readValue(json, IDataObject.class);
-    s_testHelper.assertDoListEquals(list, DoList.class.cast(marshalled));
+    s_testHelper.assertEquals(list, marshalled);
     DoList marshalledList = DoList.class.cast(marshalled);
     assertEquals("foo", marshalledList.get(0));
-    s_testHelper.assertDoEntityEquals(item1, TestItemDo.class.cast(marshalledList.get(1)));
+    s_testHelper.assertEquals(item1, TestItemDo.class.cast(marshalledList.get(1)));
     assertEquals("bar", marshalledList.get(2));
-    s_testHelper.assertDoEntityEquals(item2, TestItemDo.class.cast(marshalledList.get(3)));
+    s_testHelper.assertEquals(item2, TestItemDo.class.cast(marshalledList.get(3)));
   }
 
   // ------------------------------------ tests with custom JSON type property name ------------------------------------
